version 1.1.3
- Improve formatting of "influential observations" test output
  for non-English locales

09/09/03 version 1.1.2
- Fix bug in time-series plot from popup menu in main window
- Fix build problem: "make install" could fail to install the
  GUI program under some conditions (thanks to Dirk Eddelbuettel
  for spotting this)
- Update the Spanish translation
- Win32 version: switch to the native Windows font selection
  dialog box (some problems were reported with the modified
  gtk font selection on win32)
- Win32 version: update to gtk 2.2.4 and pango 1.2.5
- Library: switch to using the Cephes gamma() code throughout,
  and delete some redundant code

09/07/03 version 1.1.1
- Graph editing: add facility to write labels onto the graph
- Graph editing: allow removal of auto-fitted OLS line
- Graph editing: allow choice of TrueType font if gnuplot supports
  this option (requires libgd and freetype)
- Add compaction method (e.g. average, sum) as an attribute of 
  variables -- settable under Variable/Edit attributes
- Add "outfile" command to send output of selected commands to
  a specified file
- In importing data from a database, recognize if a variable
  of the same name is already in the working dataset
- Fix memory bug in opening remote database
- Start adding Principal Components Analysis
- Fix "pmax" bug in printing of actual, fitted and residuals
- When using "<-" save mechanism for models, preserve the model
  info so it's accessible for genr, etc.
- Fix bug in numbering of auto-generated lagged variables
- Fix bug in parsing of gnuplot { ... } special command list
- Fix bug in model table (wrong coefficient numbering)
- Fix bug: when a file is dragged onto gretl, opening the
  file failed if it has a space in its name
- configure: require correct version of GMP (>= 4.0.1)
- Fix bug: gretlcli.exe on win32 didn't find user directory
- Workaround: command-line invocation of gretlw32.exe with 
  datafile could crash (I think this was a Windows bug)