@@ -138,6 +138,7 @@ enum extra_cmds {
     CLI_HELP_ENGLISH,
     GUI_HELP_ENGLISH,
     MODELTABLE,
+    CREATE_USERDIR,
     CMD_MAX
 };
 
